# AdventOfCode

./: .gitignore  .gitmodules  README.md
2025/: CMakeLists.txt  README.md
2025/include/: Day1.hpp  DayX.hpp  DebugUtils.hpp
2025/src/: Day1.cpp  Day2.cpp  Day3.cpp  Day4.cpp  Day5.cpp  Day6.cpp  Day7.cpp  Day8.cpp  DayX.cpp  main.cpp
aoc-2024/: Cargo.toml  README.md  rustfmt.toml
aoc-2024/crates/aoc_2025_app/src/: main.rs
aoc-2024/crates/aoc_2025_lib/: Cargo.toml
aoc-2024/crates/aoc_2025_lib/benches/: blink.rs
aoc-2024/crates/aoc_2025_lib/src/: common.rs  day1.rs  day10.rs  day11.rs  day12.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs
aoc-2025/: Cargo.toml
aoc-2025/.cargo/: config.toml
aoc-2025/crates/aoc_2025_app/: Cargo.toml  build.rs
aoc-2025/crates/aoc_2025_app/src/: main.rs
aoc-2025/crates/aoc_2025_lib/: Cargo.toml
aoc-2025/crates/aoc_2025_lib/src/: common.rs  day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day8.rs  lib.rs
